Added a lot of JavaDOC + Added a test for Common + some reordering

--- a/resources/text_en.properties
+++ b/resources/text_en.properties
@@ -107,7 +107,6 @@ settings.version.getting=Checking updates...
 settings.version=Version \:
 settings.version.available=Version ${param\:0} available
 settings.version.error=An error occurred, see logs
-settings.version.downloading=Downloading...
 settings.euro_currency=Euro rate \:
 settings.version.check=Check now
 settings.version.retry=Retry
@@ -120,3 +119,4 @@ overview.menu.shortcuts=Tools
 overview.menu.currency_shortcut=Edit currency rate
 properties_editor.backup=Back Up
 archives.table.name=Name
+settings.file_chooser.error.content=${param\:0}
