--- a/resources/text_fr.properties
+++ b/resources/text_fr.properties
@@ -107,7 +107,6 @@ settings.version.getting=Vérification des mises à jour...
 settings.version=Version \:
 settings.version.available=Version ${param\:0} disponible
 settings.version.error=Une erreur est survenue, voir logs
-settings.version.downloading=Téléchargement...
 settings.euro_currency=Devise Euro \:
 settings.version.check=Vérifier maintenant
 settings.version.retry=Réessayer
@@ -120,3 +119,4 @@ overview.menu.shortcuts=Outils
 overview.menu.currency_shortcut=Éditer devise
 properties_editor.backup=Backup
 archives.table.name=Nom
+settings.file_chooser.error.content=${param\:0}
