Updated template (bold CHF sum)

--- a/resources/tex_template/invoice_body.tex
+++ b/resources/tex_template/invoice_body.tex
@@ -101,7 +101,7 @@ Pieterlen, \date
 % \itemSep
 
 \\
-\multicolumn{1}{r}{Tot.}   & Sfr. & \totalChf\\
+\multicolumn{1}{r}{Tot.}   & \textbf{Sfr.} & \textbf{\totalChf}\\
 						   & \euro & \totalEuro
 \\
 \\
