Fixes + minor changes

--- a/resources/text_en.properties
+++ b/resources/text_en.properties
@@ -120,3 +120,4 @@ overview.menu.currency_shortcut=Edit currency rate
 properties_editor.backup=Back Up
 archives.table.name=Name
 settings.file_chooser.error.content=${param\:0}
+errors.google.title=Error
