--- a/resources/text_fr.properties
+++ b/resources/text_fr.properties
@@ -1,10 +1,10 @@
-confirmation.existing_invoice.header = Une facture avec l'ID ${param\:0} existe déjà.
+confirmation.existing_invoice.header = Une facture avec l'ID ${param\:0} existe dï¿½jï¿½.
 overview.address=Adresse de destination\:
 overview.date=Date\:
 overview.id=ID Facture\:
 overview.add_client=Ajouter client
-overview.create=Créer
-item.client_name=Nom et prénom \:
+overview.create=Crï¿½er
+item.client_name=Nom et prï¿½nom \:
 overview.remove_client=Supprimer
 item.from_date=Du
 item.to_date=au
@@ -14,109 +14,110 @@ dialog.warning_title=Attention
 item.vat=TVA \:
 overview.address_prompt=Entrez l'adresse
 item.total=Total \:
-overview.add_item=Ajouter à ${param\:0}
-overview.edit_items=Éditer
+overview.add_item=Ajouter ï¿½ ${param\:0}
+overview.edit_items=ï¿½diter
 item_editor.add=Ajouter
 item_editor.save=Enregistrer
 item_editor.cancel=Annuler
-properties_editor.key=Propriété
+properties_editor.key=Propriï¿½tï¿½
 properties_editor.value=Valeur
-confirmation.existing_invoice.content=Voulez-vous écraser l'ancienne facture ou enregistrer celle-ci comme une nouvelle facture avec l'ID ${param\:1}
-confirmation.existing_invoice.create_new=Créer nouvelle
-confirmation.existing_invoice.update_old=Écraser ancienne
+confirmation.existing_invoice.content=Voulez-vous ï¿½craser l'ancienne facture ou enregistrer celle-ci comme une nouvelle facture avec l'ID ${param\:1}
+confirmation.existing_invoice.create_new=Crï¿½er nouvelle
+confirmation.existing_invoice.update_old=ï¿½craser ancienne
 dialog.error_title=Erreur
 dialog.information_title=Information
 errors.load_config.header=Une erreur est survenue lors du chargement des factures et articles.
-dialog.retry=Réessayer
+dialog.retry=Rï¿½essayer
 dialog.ignore=Ignorer
-errors.load_config.ignore.header=En continuant, tous les anciennes factures et articles risquent d'être perdus.
+errors.load_config.ignore.header=En continuant, tous les anciennes factures et articles risquent d'ï¿½tre perdus.
 overview.menu.file=Fichier
 overview.menu.new=Nouvelle facture
-overview.menu.edit_items=Éditer articles
+overview.menu.edit_items=ï¿½diter articles
 overview.menu.invoices=Anciennes factures
-overview.menu.settings=Paramètres
+overview.menu.settings=Paramï¿½tres
 overview.menu.quit=Quitter
-overview.name_prompt=<double clique pour éditer>
+overview.name_prompt=<double clique pour ï¿½diter>
 archives.remove=Supprimer
-archives.edit=Éditer
+archives.edit=ï¿½diter
 archives.open=Ouvrir PDF
 archives.view=Visualiser
 archives.search=Rechercher
 archives.open_dir=Ouvrir dossier de factures
 archives.table.date=Date
-errors.generic_cmd_failure.header=Le processus ${param\:0} a échoué, voir les logs pour plus de détails.
-archives.no_selection=<i>Sélectionnez une facture</i>
+errors.generic_cmd_failure.header=Le processus ${param\:0} a ï¿½chouï¿½, voir les logs pour plus de dï¿½tails.
+archives.no_selection=<i>Sï¿½lectionnez une facture</i>
 archives.menu.quit=Fermer
 errors.fnf.header=Fichier introuvable
 errors.fnf.content=Le fichier suivant est introuvable\:\n${param\:0}
 confirmation.remove_confirmation.header=Voulez-vous vraiment supprimer cet/ces facture(s)?
-confirmation.remove_confirmation.content=Le(s) PDF correspondant seront également supprimés.
+confirmation.remove_confirmation.content=Le(s) PDF correspondant seront ï¿½galement supprimï¿½s.
 dialog.confirmation_title=Confirmation
-errors.saving_failed.header=Une erreur est survenue lors de l'enregistrement des préférences.
-errors.saving_failed.content=Essayez à nouveau ou consultez logs pour plus de détails.
-overview.creating=Création...
-archives.menu.default_action=Action par défaut
+errors.saving_failed.header=Une erreur est survenue lors de l'enregistrement des prï¿½fï¿½rences.
+errors.saving_failed.content=Essayez ï¿½ nouveau ou consultez logs pour plus de dï¿½tails.
+overview.creating=Crï¿½ation...
+archives.menu.default_action=Action par dï¿½faut
 settings.invoice_dir=Dossier contenant les factures \:
 settings.language=Langue \:
-settings.choose_file=Éditer
-settings.file_chooser.title=Sélectionnez un dossier
-settings.file_chooser.error.header=Impossible de créer ce dossier
-settings.file_chooser.migrate.content=Voulez-vous transférer les anciennes factures au nouveau dossier?
+settings.choose_file=ï¿½diter
+settings.file_chooser.title=Sï¿½lectionnez un dossier
+settings.file_chooser.error.header=Impossible de crï¿½er ce dossier
+settings.file_chooser.migrate.content=Voulez-vous transfï¿½rer les anciennes factures au nouveau dossier?
 settings.file_chooser.migrate.header=Ancienne factures
-errors.copy_failed.header=Transfer de fichiers échoué
+errors.copy_failed.header=Transfer de fichiers ï¿½chouï¿½
 google_profile.add=Connecter
-google_profile.remove=Déconnecter
-properties_editor.local=Propriétés locales
-properties_editor.shared=Propriétés partagées
-settings.advanced=Avancé
+google_profile.remove=Dï¿½connecter
+properties_editor.local=Propriï¿½tï¿½s locales
+properties_editor.shared=Propriï¿½tï¿½s partagï¿½es
+settings.advanced=Avancï¿½
 settings.drive=Synchronisation Google Drive \:
 settings.round_vat=Arrondir TVA* \:
-settings.round_vat.more=Arrondi le la part de TVA à 5 centimes\:\n\
-3.41 sera arrondi à 3.4\n\
-2.26 sera arrondi à 2.5\n
+settings.round_vat.more=Arrondi le la part de TVA ï¿½ 5 centimes\:\n\
+3.41 sera arrondi ï¿½ 3.4\n\
+2.26 sera arrondi ï¿½ 2.5\n
 settings.export=Exporter application
 google_profile.solve=Voir erreur
 errors.google.header=Une erreur est survenue lors de la connection au service Google Drive
-errors.google.disconnect=Déconnecter le compte
+errors.google.disconnect=Dï¿½connecter le compte
 errors.google.content=${param\:0}
-errors.google.retry=Réessayer
-properties_editor.drive=Propriétés Drive
+errors.google.retry=Rï¿½essayer
+properties_editor.drive=Propriï¿½tï¿½s Drive
 properties_editor.drive_files=Fichiers Drive
 drive_status.insert=Synchronisation (upload)...
 drive_status.list=Synchronisation...
 drive_status.remove=Synchronisation...
 drive_status.update=Synchronisation (download)...
-drive_status.error=Synchronisation a échoué
+drive_status.error=Synchronisation a ï¿½chouï¿½
 drive_status.authorize=En attente de la confirmation de l'utilisateur
 google_profile.cancel=Annuler
 settings.close=Fermer
-errors.tex.header=Un erreur est survenue lors de la génération du PDF
+errors.tex.header=Un erreur est survenue lors de la gï¿½nï¿½ration du PDF
 overview.title=Facture
-item_editor.title=Éditeur d'articles
-settings.title=Paramètres
-properties_editor.title=Paramètres - Avancé
+item_editor.title=ï¿½diteur d'articles
+settings.title=Paramï¿½tres
+properties_editor.title=Paramï¿½tres - Avancï¿½
 archives.title=Archives
 settings.ignore_count=Afficher nombre d'articles* \:
-settings.ignore_count.more=Si activé, le compte d'articles est affiché devant chaque article
-drive_status.error_registration=Permission refusée
-drive_status.get_info=Chargement des données utilisateur...
+settings.ignore_count.more=Si activï¿½, le compte d'articles est affichï¿½ devant chaque article
+drive_status.error_registration=Permission refusï¿½e
+drive_status.get_info=Chargement des donnï¿½es utilisateur...
 archives.table.total=Total
-settings.update=Mettre à jour
+settings.update=Mettre ï¿½ jour
 settings.version.current=Version actuelle ${param\:0}
-settings.version.getting=Vérification des mises à jour...
+settings.version.getting=Vï¿½rification des mises ï¿½ jour...
 settings.version=Version \:
 settings.version.available=Version ${param\:0} disponible
 settings.version.error=Une erreur est survenue, voir logs
 settings.euro_currency=Devise Euro \:
-settings.version.check=Vérifier maintenant
-settings.version.retry=Réessayer
+settings.version.check=Vï¿½rifier maintenant
+settings.version.retry=Rï¿½essayer
 currency.current_rate=Devise actuelle*\:
-currency.rate_info=* Source\: Banque Centrale Européene, vérifié le ${param\:0}
+currency.rate_info=* Source\: Banque Centrale Europï¿½ene, vï¿½rifiï¿½ le ${param\:0}
 currency.chf=CHF
 currency.euro=Euro
 currency.error=Un erreur est survenue, impossible d'afficher la devise courante
 overview.menu.shortcuts=Outils
-overview.menu.currency_shortcut=Éditer devise
+overview.menu.currency_shortcut=ï¿½diter devise
 properties_editor.backup=Backup
 archives.table.name=Nom
 settings.file_chooser.error.content=${param\:0}
+errors.google.title=Erreur
